adding deatils to all about me

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a K-8 elementary teacher.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Vietnam</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Watch movies, Snacking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A cool teacher who knows programing.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Renton, WA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's fun.</p>
     </section>
 
     <footer id="footer">
